# axum-sandbox

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
public/js/: index.js
src/: main.rs
src/controller/: api.rs  index.rs  mod.rs
templates/: index.html
