[package]
name = "toy-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
askama = "0.12.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
